# native-midi-mac

./: .gitignore  NativeMIDIMac.c  NativeMIDIMac.h  NativeMIDIMac_Prefix.pch  README.md
NativeMIDIMac.xcodeproj/: project.pbxproj  svp.mode1v3  svp.pbxuser
src/: CMakeCache.txt  CMakeLists.txt  NativeMIDI.cpp  cmake_install.cmake  install_manifest.txt
src/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
src/Debug/NativeMIDI.framework/Versions/A/: NativeMIDI
src/NativeMIDI.build/Debug/ALL_BUILD.build/: dgph~
src/NativeMIDI.build/Debug/NativeMIDI.build/: dgph~
src/NativeMIDI.build/Debug/NativeMIDI.build/Objects-normal/x86_64/: NativeMIDI.LinkFileList
src/NativeMIDI.build/Debug/ZERO_CHECK.build/: Script-660EDAB32E0442488E45D791.sh  dgph~
src/NativeMIDI.build/Debug/install.build/: Script-B2E40C9BBB414134A71794BF.sh  dgph~
src/NativeMIDI.build/Release/ALL_BUILD.build/: Script-4075B57FDCCD4A2799263E7D.sh  dgph  dgph~
src/NativeMIDI.build/Release/NativeMIDI.build/: dgph  dgph~
src/NativeMIDI.build/Release/NativeMIDI.build/Objects-normal/x86_64/: NativeMIDI.LinkFileList  NativeMIDI.d
src/NativeMIDI.build/Release/ZERO_CHECK.build/: dgph  dgph~
src/NativeMIDI.build/Release/install.build/: dgph  dgph~
src/NativeMIDI.xcodeproj/: project.pbxproj
src/Release/NativeMIDI.framework/Versions/A/: NativeMIDI
src/Release/NativeMIDI.framework/Versions/A/Resources/: Info.plist
swc/: build.sh
swc/src/fs/ane/: NativeMIDI.as
test/: NativeMIDITest-app.xml  NativeMIDITest.as  NativeMIDITest.fla  NativeMIDITest.swf  test.bat  test.sh
test/extensions/NativeMIDIANE.ane/: catalog.xml  library.swf
